--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,14 @@
 /* Add CSS Styling */
+
+.avatar {
+    width: 300px;
+}
+
+.proportioned {
+    height: auto;
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
